email template added and updated

--- a/plugins/rajesh/email/views/mail/careers.htm
+++ b/plugins/rajesh/email/views/mail/careers.htm
@@ -1,15 +1,14 @@
-subject = "Your product has been added to OctoberCMS project"
+subject = "JOB Request"
 ==
 
-Hi ,
-
-Good news! User just added your product  to a project.
+Name: {{ name }}
+E-Mail: {{ email }}
 
 This message was sent using no formatting (plain text)
 ==
 
-<p>Hi ,</p>
+<p>Name: {{ name }}</p>
 
-<p>Good news! User  just added your product <strong> product </strong> to a project.</p>
+<p>E-Mail: {{ email }}</p>
 
 <p>This email was sent using formatting (HTML)</p>
