contact us email template updated

--- a/plugins/rajesh/email/views/mail/contactus.htm
+++ b/plugins/rajesh/email/views/mail/contactus.htm
@@ -2,14 +2,18 @@ subject = "Contact Request"
 ==
 
 Name: {{ name }}
+
 E-Mail: {{ email }}
-Message: {{ message }}
+
+Message: {{ messages }}
 
 This message was sent using no formatting (plain text)
 ==
 
 <p>Name: {{ name }}</p>
+
 <p>E-Mail: {{ email }}</p>
-<p>Message: {{ message }}</p>
+
+<p>Message: {{ messages }}</p>
 
 <p>This email was sent using formatting (HTML)</p>
