--- a/themes/oora/layouts/oora.htm
+++ b/themes/oora/layouts/oora.htm
@@ -3,6 +3,12 @@
 <html lang="en">
 
 <head>
+<meta name="description" content="Siri Website">
+<meta name="keywords" content="Siri">
+<meta name="robots" content="index, follow">
+<meta http-equiv="X-UA-Compatible" content="IE=8; IE=9" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 	<meta charset="UTF-8">
 	<title> {{ this.page.title }} </title>
 
@@ -43,7 +49,7 @@
 	 <link rel="stylesheet" type="text/css" href="{{ 'assets/css/footer.css'|theme }}">
 	 <link rel="stylesheet" type="text/css" href="{{ 'assets/css/team.css'|theme }}">
 	 <link rel="stylesheet" type="text/css" href="{{ 'assets/css/font-awesome.css'|theme }}">
-	 	
+
 </head>
 
 <body>
