Raj review comments are incorporated

--- a/themes/oora/partials/nav.htm
+++ b/themes/oora/partials/nav.htm
@@ -19,25 +19,25 @@
 					<li id="nav-about-us"><a href="{{ 'aboutus'|page }}">About-Us</a></li>
 
 					<li class="dropdown" id="nav-products">
-						<a href="" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
+						<a  class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 
 							<li class="dropdown" id="nav-products">
-								<a href="" class="dropdown-toggle" data-toggle="dropdown">IT Management<b class="caret"></b></a>
+								<a  class="dropdown-toggle" data-toggle="dropdown">IT Management<b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="{{ 'services/inframanagement'|page }}">Infrastructure Management</a></li>
 									<li><a href="{{ 'services/erpsapr3'|page }}">ERP SAP/R3</a></li>
 								</ul>
 							</li>
 							<li class="dropdown" id="nav-products">
-								<a href="" class="dropdown-toggle" data-toggle="dropdown">Software Development<b class="caret"></b></a>
+								<a  class="dropdown-toggle" data-toggle="dropdown">Software Development<b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="{{ 'services/automotive'|page }}">Automotive</a></li>
 									<li><a href="{{ 'services/telecomwirelessiot'|page }}">Telecom Wireless IOT</a></li>
 								</ul>
 							</li>
 							<li class="dropdown" id="nav-products">
-								<a href="" class="dropdown-toggle" data-toggle="dropdown">Off-Shore Development<b class="caret"></b></a>
+								<a  class="dropdown-toggle" data-toggle="dropdown">Off-Shore Development<b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li><a href="{{ 'services/webdevelopment'|page }}">Web Development</a></li>
 									<li><a href="{{ 'services/mobilapplications'|page }}">Mobile Applications</a></li>
