IOT HW/SW page is updated

--- a/themes/oora/assets/css/app.css
+++ b/themes/oora/assets/css/app.css
@@ -771,10 +771,12 @@ h4, h5, h6 {
 	padding: 17px 0 0 0;
 }
 
-/* below code added to set the '0' margin for h3, otherwise in mobile mode gap occurs between the rows in whyhow page "How we do it"  */
+/* below code added to set the '0' margin for h3, otherwise in mobile device a gap occurs between the rows in whyhow page "How we do it"  */
 @media (max-width: 999px) {
 	h1, h2, h3, h4, h5, h6 {
-	  margin: 0 0 0px 0;
+		margin: 0 0 0 0;
+		padding-top: 20px;
+		padding-bottom: 20px;
 	}
 }
 
