--- a/themes/oora/layouts/oora.htm
+++ b/themes/oora/layouts/oora.htm
@@ -50,6 +50,8 @@
 	 <link rel="stylesheet" type="text/css" href="{{ 'assets/css/team.css'|theme }}">
 	 <link rel="stylesheet" type="text/css" href="{{ 'assets/css/font-awesome.css'|theme }}">
 
+	{% styles %}
+
 </head>
 
 <body>
