--- a/themes/oora/layouts/oora.htm
+++ b/themes/oora/layouts/oora.htm
@@ -15,6 +15,7 @@
 	<!-- for da-slider fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Economica:700,400italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Monsterrat:400,700|Merriweather:400,300italic,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<!-- <link rel="stylesheet" type="text/css" href="{{ [
 		'assets/plugins/voltage/css/icomoon.css',
