--- a/themes/oora/partials/nav.htm
+++ b/themes/oora/partials/nav.htm
@@ -7,7 +7,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/"><img class="logo-image" style="margin-top: -9px;" src="{{ 'assets/images/logo2.png'|theme }}" alt="SiriAB" title="Wimera"></a>
+				<a class="navbar-brand" href="/"><img class="logo-image" style="margin-top: -9px;" src="{{ 'assets/images/logo2.png'|theme }}" alt="SiriAB"></a>
 			</div>
 
 			<div class="navbar-collapse collapse navbar-right">
