--- a/themes/oora/assets/css/app.css
+++ b/themes/oora/assets/css/app.css
@@ -7,7 +7,7 @@
 }
 
 body {
-	font-family: Arial, 'PT Sans', Ubuntu, Helvetica, sans-serif;
+	font-family: "Raleway", sans-serif;
 	color: #313131 ! important;
 
 	/* The fixed navbar will overlay your other content, unless you add  padding to the top of the <body>. */
@@ -41,20 +41,20 @@ a:hover {
 
 p {
 	margin-bottom: 15px;
-	font-family: Arial;
+	font-family: "Raleway";
 }
 
 h1 {
-	font-family: "Century Gothic", Arial, 'PT Sans', Ubuntu, Helvetica, sans-serif;
+	font-family: "Raleway", sans-serif;
 }
 
 h2 {
-	font-family: "Century Gothic", Arial, 'PT Sans', Ubuntu, Helvetica, sans-serif;
+	font-family: "Raleway", sans-serif;
 	margin: 30px 0 20px;
 }
 
 h3 {
-	font-family: "Century Gothic", Arial, 'PT Sans', Ubuntu, Helvetica, sans-serif;
+	font-family: "Raleway", sans-serif;
 	/*
 	 * the below code commented, it is causing the alignemnt issue in
 	 * whyhow page in mobile mode
@@ -241,7 +241,7 @@ hr{
 
 /* table */
 .table thead th {
-	font-family: "Century Gothic", Arial, sans-serif;
+	font-family: "Raleway", sans-serif;
 	text-transform: uppercase;
 	font-weight: normal;
 	background-color: #bc451b;
